--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "credit-card": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "credit-card"
+    }
+  },
+  "defaultProject": "credit-card",
+  "cli": {
+    "analytics": "2759e3e7-9bfe-4c49-8685-9f8de9c526a7"
+  }
 }
